# casbinrs-mongo-adapter

./: .gitmodules  Cargo.toml  README.md
src/: actions.rs  adapter.rs  error.rs  lib.rs  models.rs
