[package]
name = "casbinrs-mongo-adapter"
version = "0.1.0"
authors = ["Simono il magnifico <simoneromano@tutanota.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Casbin
casbin = { version = "2.0.3", default-features = false }

# Async runtimes
tokio = { version = "0.3.5", default-features = false, optional = true }
async-std = { version = "1.8.0", default-features = false, optional = true }

# Driver
mongodb = { version = "1.1.1", default-features = false }

# Others
async-trait = "0.1.42"
dotenv = "0.15.0"
futures = "0.3.8"

[features]
default = ["runtime-tokio"]

# Async runtimes
runtime-async-std = ["casbin/runtime-async-std", "mongodb/async-std-runtime"]
runtime-tokio = ["casbin/runtime-tokio", "mongodb/tokio-runtime"]

# Test deps
[dev-dependencies]
async-std = { version = "1.8.0", features = [ "attributes" ] }
tokio = { version = "0.3.5", features = [ "full" ] }
